--- a/index.html
+++ b/index.html
@@ -1,6 +1,49 @@
 <!DOCTYPE html5>
 <html>
+    <head>
+        <title>OPIC Study!</title>
+        <link href="./css/bootstrap.css" type="text/css" rel="stylesheet"/>
+        <script type="text/javascript" src="./js/jquery-3.5.1.min.js"></script>
+        <script type="text/javascript" src="./js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="./js/main.js"></script>
+    </head>
+
     <body>
-        <h1>hi</h1>
+        <div class="container">
+            <div class="row mt-5">
+                <div class="col-12">
+                    <h3>자기소개</h3>
+                    <div class="list-group">
+                        <a href="#" class="list-group-item list-group-item-action" id="I1" >자기소개</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-5">
+                <div class="col-12">
+                    <h3>선택 주제 - 집</h3>
+                    <div class="list-group">
+                        <a href="#" class="list-group-item list-group-item-action" id="O_H1">집1</a>
+                        <a href="#" class="list-group-item list-group-item-action" id="O_H2">집2</a>
+                        <a href="#" class="list-group-item list-group-item-action" id="O_H3">집3</a>
+                        <a href="#" class="list-group-item list-group-item-action" id="O_H4">집4</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-5">
+                <div class="col-12">
+                    <h3>선택 주제 - 아파트</h3>
+                    <div class="list-group">
+                        <a href="#" class="list-group-item list-group-item-action" id="O_H1">아파트1</a>
+                        <a href="#" class="list-group-item list-group-item-action" id="O_H2">아파트2</a>
+                        <a href="#" class="list-group-item list-group-item-action" id="O_H3">아파트3</a>
+                        <a href="#" class="list-group-item list-group-item-action" id="O_H4">아파트4</a>
+                    </div>
+                </div>
+            </div>
+                    
+        </div>
+
     </body>
 </html>
