--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html5>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>OPIC Study!</title>
         <link href="./css/bootstrap.css" type="text/css" rel="stylesheet"/>
         <script type="text/javascript" src="./js/jquery-3.5.1.min.js"></script>
@@ -14,7 +15,7 @@
                 <div class="col-12">
                     <h3>자기소개</h3>
                     <div class="list-group">
-                        <a href="#" class="list-group-item list-group-item-action" id="I1" >자기소개</a>
+                        <a class="list-group-item list-group-item-action" id="I1" >자기소개</a>
                     </div>
                 </div>
             </div>
@@ -23,10 +24,10 @@
                 <div class="col-12">
                     <h3>선택 주제 - 집</h3>
                     <div class="list-group">
-                        <a href="#" class="list-group-item list-group-item-action" id="O_H1">집1</a>
-                        <a href="#" class="list-group-item list-group-item-action" id="O_H2">집2</a>
-                        <a href="#" class="list-group-item list-group-item-action" id="O_H3">집3</a>
-                        <a href="#" class="list-group-item list-group-item-action" id="O_H4">집4</a>
+                        <a class="list-group-item list-group-item-action" id="O_H1">집1</a>
+                        <a class="list-group-item list-group-item-action" id="O_H2">집2</a>
+                        <a class="list-group-item list-group-item-action" id="O_H3">집3</a>
+                        <a class="list-group-item list-group-item-action" id="O_H4">집4</a>
                     </div>
                 </div>
             </div>
@@ -35,10 +36,34 @@
                 <div class="col-12">
                     <h3>선택 주제 - 아파트</h3>
                     <div class="list-group">
-                        <a href="#" class="list-group-item list-group-item-action" id="O_H1">아파트1</a>
-                        <a href="#" class="list-group-item list-group-item-action" id="O_H2">아파트2</a>
-                        <a href="#" class="list-group-item list-group-item-action" id="O_H3">아파트3</a>
-                        <a href="#" class="list-group-item list-group-item-action" id="O_H4">아파트4</a>
+                        <a class="list-group-item list-group-item-action" id="O_H1">아파트1</a>
+                        <a class="list-group-item list-group-item-action" id="O_H2">아파트2</a>
+                        <a class="list-group-item list-group-item-action" id="O_H3">아파트3</a>
+                        <a class="list-group-item list-group-item-action" id="O_H4">아파트4</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-5">
+                <div class="col-12">
+                    <h3>선택 주제 - 조깅</h3>
+                    <div class="list-group">
+                        <a class="list-group-item list-group-item-action" id="O_JOG1">조깅1</a>
+                        <a class="list-group-item list-group-item-action" id="O_JOG2">조깅2</a>
+                        <a class="list-group-item list-group-item-action" id="O_JOG3">조깅3</a>
+                        <a class="list-group-item list-group-item-action" id="O_JOG4">조깅4</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-5">
+                <div class="col-12">
+                    <h3>돌발 주제 - 집안 일</h3>
+                    <div class="list-group">
+                        <a class="list-group-item list-group-item-action" id="P_HOS1">질문1</a>
+                        <a class="list-group-item list-group-item-action" id="P_HOS2">질문2</a>
+                        <a class="list-group-item list-group-item-action" id="P_HOS3">질문3</a>
+                        <a class="list-group-item list-group-item-action" id="P_HOS4">질문4</a>
                     </div>
                 </div>
             </div>
