--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
         <title>OPIC Study!</title>
         <link href="./css/bootstrap.css" type="text/css" rel="stylesheet"/>
         <script type="text/javascript" src="./js/jquery-3.5.1.min.js"></script>
