8/13 버전v2 collapsing 기능

--- a/index.html
+++ b/index.html
@@ -11,64 +11,15 @@
     </head>
 
     <body>
+        
         <div class="container">
-            <div class="row mt-5">
-                <div class="col-12">
-                    <h3>자기소개</h3>
-                    <div class="list-group">
-                        <a class="list-group-item list-group-item-action" id="I1" >자기소개</a>
-                    </div>
-                </div>
+            <div class="row mt-5 timer-area mb-5">
+                열공합시다ㅏ아ㅏ
             </div>
 
-            <div class="row mt-5">
-                <div class="col-12">
-                    <h3>선택 주제 - 집</h3>
-                    <div class="list-group">
-                        <a class="list-group-item list-group-item-action" id="O_H1">집1</a>
-                        <a class="list-group-item list-group-item-action" id="O_H2">집2</a>
-                        <a class="list-group-item list-group-item-action" id="O_H3">집3</a>
-                        <a class="list-group-item list-group-item-action" id="O_H4">집4</a>
-                    </div>
-                </div>
+            <div id="main" class="mb-5">
             </div>
 
-            <div class="row mt-5">
-                <div class="col-12">
-                    <h3>선택 주제 - 아파트</h3>
-                    <div class="list-group">
-                        <a class="list-group-item list-group-item-action" id="O_H1">아파트1</a>
-                        <a class="list-group-item list-group-item-action" id="O_H2">아파트2</a>
-                        <a class="list-group-item list-group-item-action" id="O_H3">아파트3</a>
-                        <a class="list-group-item list-group-item-action" id="O_H4">아파트4</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row mt-5">
-                <div class="col-12">
-                    <h3>선택 주제 - 조깅</h3>
-                    <div class="list-group">
-                        <a class="list-group-item list-group-item-action" id="O_JOG1">조깅1</a>
-                        <a class="list-group-item list-group-item-action" id="O_JOG2">조깅2</a>
-                        <a class="list-group-item list-group-item-action" id="O_JOG3">조깅3</a>
-                        <a class="list-group-item list-group-item-action" id="O_JOG4">조깅4</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row mt-5">
-                <div class="col-12">
-                    <h3>돌발 주제 - 집안 일</h3>
-                    <div class="list-group">
-                        <a class="list-group-item list-group-item-action" id="P_HOS1">질문1</a>
-                        <a class="list-group-item list-group-item-action" id="P_HOS2">질문2</a>
-                        <a class="list-group-item list-group-item-action" id="P_HOS3">질문3</a>
-                        <a class="list-group-item list-group-item-action" id="P_HOS4">질문4</a>
-                    </div>
-                </div>
-            </div>
-                    
         </div>
 
     </body>
