8/13 타이머 구현

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html5>
 <html>
     <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
         <title>OPIC Study!</title>
@@ -12,9 +13,14 @@
 
     <body>
         
-        <div class="container">
-            <div class="row mt-5 timer-area mb-5">
-                열공합시다ㅏ아ㅏ
+        <div class="container" style="padding-top: 190px;">
+            <div style="text-align: center; padding-top: 30px; position: fixed; left: 0; top: 0; z-index: 100; background-color: #222; height: 170px; width: 100%;">
+                <div>
+                    <h2>LET'S PRACTICE!!</h2>
+                </div>
+                <div id="timer" style="font-size: 4em;">
+                    00:00.000
+                </div>
             </div>
 
             <div id="main" class="mb-5">
