--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
     </head>
 
     <body>
-        
-        <div class="container" style="padding-top: 190px;">
-            <div style="text-align: center; padding-top: 30px; position: fixed; left: 0; top: 0; z-index: 100; background-color: #222; height: 170px; width: 100%;">
+    
+        <div class="container" style="padding-top: 230px;">
+            <div style="text-align: center; padding-top: 30px; position: fixed; left: 0; top: 0; z-index: 100; background-color: #222; height: 240px; width: 100%;">
                 <div>
                     <h2>LET'S PRACTICE!!</h2>
                 </div>
                 <div id="timer" style="font-size: 4em;">
                     00:00.000
                 </div>
+                <div id="reset" class="btn btn-primary btn-lg">
+                    Reset
+                </div>  
+
             </div>
 
             <div id="main" class="mb-5">
