--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
                 <div id="reset" class="btn btn-primary btn-lg">
                     Reset
                 </div>  
-
+                
+            </div>
+            
+            <div id="main" class="mb-3">
             </div>
 
-            <div id="main" class="mb-5">
+            <div class="mb-5 ml-3">
+                ※ 모든 mp3 파일은 해커스 OPIC START Intermediate 교재 첨부 파일입니다. 
             </div>
 
         </div>
