8/13 녹화 기능 제거 및 설명 업뎃

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                     <div id="reset" class="btn btn-primary btn-lg">
                         Reset
                     </div>  
-                    <div id="save" class="btn btn-secondary btn-lg">
+                    <!--<div id="save" class="btn btn-secondary btn-lg">
                         Stop and save my voice
-                    </div>  
+                    </div>-->  
                 </div>
                 <a id="download"></a>
             </div>
