8/13 리플레이 기능, 편의성 개선

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     </head>
 
     <body>
-        <div class="container" style="padding-top: 230px;">
-            <div style="text-align: center; padding-top: 30px; position: fixed; left: 0; top: 0; z-index: 100; background-color: #222; height: 240px; width: 100%;">
+        <div class="container" style="padding-top: 270px;">
+            <div style="text-align: center; padding-top: 30px; position: fixed; left: 0; top: 0; z-index: 100; background-color: #222; height: 280px; width: 100%;">
                 <div>
                     <h2>LET'S PRACTICE!!</h2>
+                    <h6 id="title">-</h6>
                 </div>
                 <div id="timer" style="font-size: 4em;">
                     00:00.000
@@ -23,6 +24,9 @@
                 <div class="btn-group">
                     <div id="reset" class="btn btn-primary btn-lg">
                         Reset
+                    </div>
+                    <div id="replay" class="btn btn-secondary btn-lg">
+                        Replay
                     </div>  
                 </div>
             </div>
