--- a/index.html
+++ b/index.html
@@ -6,39 +6,43 @@
         <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
         <title>OPIC Study!</title>
         <link href="./css/bootstrap.css" type="text/css" rel="stylesheet"/>
+        <link href="./css/custom.css" type="text/css" rel="stylesheet"/>
         <script type="text/javascript" src="./js/jquery-3.5.1.min.js"></script>
         <script type="text/javascript" src="./js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="./js/main.js"></script>
+        <script type="text/javascript" src="./js/app.js"></script>
     </head>
 
     <body>
-        <div class="container" style="padding-top: 260px;">
-            <div style="text-align: center; padding-top: 20px; position: fixed; left: 0; top: 0; z-index: 10; background-color: #222; height: 260px; width: 100%;">
-                <div>
-                    <h2>LET'S PRACTICE!!</h2>
-                    <h6 id="title">-</h6>
-                </div>
-                <div id="timer" style="font-size: 4em;">
-                    00:00.000
-                </div>
-                <div class="btn-group">
-                    <div id="reset" class="btn btn-primary btn-lg">
-                        Reset
-                    </div>
-                    <div id="replay" class="btn btn-secondary btn-lg">
-                        Replay
-                    </div>  
-                </div>
+        <nav class="container fixed-top" style="text-align: center; padding-top: 20px; padding-bottom: 20px; z-index: 10; background-color: #222;">
+            <div style="text-align: center;">
+                <h3>LET'S PRACTICE!!</h3>
+                <h6 id="title">-</h6>
             </div>
-            
-            <div id="main" class="mb-3">
+            <div id="timer" style="font-size: 4em;">
+                00:00.000
             </div>
 
-            <div class="mb-5 ml-3">
-                ※ 모든 mp3 파일은 해커스 OPIC START Intermediate 교재 첨부 파일입니다. 
+            <div class="progress mb-3">
+                <div id="progress" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
 
-        </div>
+            <div class="btn-group">
+                <div id="reset" class="btn btn-primary btn-lg">
+                    Reset
+                </div>
+                <div id="replay" class="btn btn-secondary btn-lg">
+                    Replay
+                </div>  
+            </div>
+
+        </nav>
+        
+        <main class="container" style="margin-top: 280px" id="main" role="main" class="mb-3">
+        </main>
+
+        <footer class="container mb-5 mt-3">
+            ※ 모든 mp3 파일은 해커스 OPIC START Intermediate 교재 첨부 파일입니다. 
+        </footer>
 
     </body>
 </html>
