--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script type="text/javascript" src="./js/jquery-3.5.1.min.js"></script>
         <script type="text/javascript" src="./js/bootstrap.min.js"></script>
         <script type="text/javascript" src="./js/app.js"></script>
+        <script type="text/javascript" src="./js/NoSleep.min.js"></script>
     </head>
 
     <body>
