--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
         <link href="./css/custom.css" type="text/css" rel="stylesheet"/>
         <script type="text/javascript" src="./js/jquery-3.5.1.min.js"></script>
         <script type="text/javascript" src="./js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="./js/app.js"></script>
         <script type="text/javascript" src="./js/NoSleep.min.js"></script>
+        <script type="text/javascript" src="./js/recorder.js"></script>
+        <script type="text/javascript" src="./js/app.js"></script>
     </head>
 
     <body>
@@ -33,13 +34,20 @@
                 </div>
                 <div id="replay" class="btn btn-secondary btn-lg">
                     Replay
-                </div>  
+                </div>
+                <div id="record" class="btn btn-danger btn-lg">
+                    Record
+                </div>
             </div>
 
         </nav>
         
         <main class="container" style="margin-top: 280px" id="main" role="main" class="mb-3">
         </main>
+
+        <div class="container mt-3">
+            <div class="list-group" id="recordingslist"></div>
+        </div>
 
         <footer class="container mb-5 mt-3">
             ※ 모든 mp3 파일은 해커스 OPIC START Intermediate 교재 첨부 파일입니다. 
