--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
         <title>OPIC Study!</title>
         <link href="./css/bootstrap.css" type="text/css" rel="stylesheet"/>
         <link href="./css/custom.css" type="text/css" rel="stylesheet"/>
-        <script type="text/javascript" src="./js/jquery-3.5.1.min.js"></script>
-        <script type="text/javascript" src="./js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="./js/NoSleep.min.js"></script>
-        <script type="text/javascript" src="./js/recorder.js"></script>
-        <script type="text/javascript" src="./js/app.js"></script>
     </head>
 
     <body>
@@ -53,5 +48,11 @@
             ※ 모든 mp3 파일은 해커스 OPIC START Intermediate 교재 첨부 파일입니다. 
         </footer>
 
+        <script type="text/javascript" src="./js/jquery-3.5.1.min.js"></script>
+        <script type="text/javascript" src="./js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="./js/NoSleep.min.js"></script>
+        <script type="text/javascript" src="./js/recorder.js"></script>
+        <script type="text/javascript" src="./js/modernizr-custom.js"></script>
+        <script type="text/javascript" src="./js/app.js"></script>
     </body>
 </html>
