8/14 github 링크 추가

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
         </div>
 
         <footer class="container mb-5 mt-3">
-            ※ 모든 mp3 파일은 해커스 OPIC START Intermediate 교재 첨부 파일입니다. 
+            ※ 모든 mp3 파일은 해커스 OPIC START Intermediate 교재 첨부 파일입니다.
+            <br/>
+            <a href="https://github.com/GyuCheol/opic.io" target="_blank">소스 코드 보기</a>
         </footer>
 
         <script type="text/javascript" src="./js/jquery-3.5.1.min.js"></script>
