--- a/index.html
+++ b/index.html
@@ -23,21 +23,29 @@
                 <div id="progress" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
 
+            <div class="form-check mb-3">
+                <input type="checkbox" class="form-check-input" id="play_for_twice">
+                <label class="form-check-label" for="play_for_twice">질문 2회 연속 자동 재생</label>
+            </div>
+
             <div class="btn-group">
-                <div id="reset" class="btn btn-primary btn-lg">
+                <button id="reset" class="btn btn-primary btn-lg">
                     Reset
-                </div>
-                <div id="replay" class="btn btn-secondary btn-lg">
+                </button>
+                <button id="replay" class="btn btn-secondary btn-lg">
                     Replay
-                </div>
-                <div id="record" class="btn btn-danger btn-lg">
+                </button>
+                <button id="pause" class="btn btn-info btn-lg" disabled>
+                    Pause
+                </button>
+                <button id="record" class="btn btn-danger btn-lg">
                     Record
-                </div>
+                </button>
             </div>
 
         </nav>
         
-        <main class="container" style="margin-top: 280px" id="main" role="main" class="mb-3">
+        <main class="container" style="margin-top: 320px" id="main" role="main" class="mb-3">
         </main>
 
         <div class="container mt-3">
@@ -45,10 +53,19 @@
         </div>
 
         <footer class="container mb-5 mt-3">
-            ※ 모든 mp3 파일은 해커스 OPIC START Intermediate 교재 첨부 파일입니다.
-            <br/>
-            <a href="https://github.com/GyuCheol/opic.io" target="_blank">소스 코드 보기</a>
+            ※ 모든 mp3 파일은 <a target="_blank" href="http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&mallGb=KOR&barcode=9791158551988&orderClick=LEa&Kc=">해커스 OPIC START Intermediate 교재</a> 첨부 파일입니다.
+            <a href="https://github.com/GyuCheol/opic.io" target="_blank">(소스 코드 보기)</a>
         </footer>
+
+        <div class="modal" id="loading" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-body" style="text-align: center;">
+                        Eva가 질문 중...
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <script type="text/javascript" src="./js/jquery-3.5.1.min.js"></script>
         <script type="text/javascript" src="./js/bootstrap.min.js"></script>
