--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <button id="replay" class="btn btn-secondary btn-lg">
                     Replay
                 </button>
-                <button id="pause" class="btn btn-info btn-lg" disabled>
+                <button id="pause" class="btn btn-info btn-lg">
                     Pause
                 </button>
                 <button id="record" class="btn btn-danger btn-lg">
@@ -47,6 +47,15 @@
         
         <main class="container" style="margin-top: 320px" id="main" role="main" class="mb-3">
         </main>
+
+        <div class="container mt-3">
+            <h4>랜덤뽑기</h4>
+            <div class="list-group">
+                <button class="list-group-item list-group-item-action" id="random1">선택주제</button>
+                <button class="list-group-item list-group-item-action" id="random2">돌발주제</button>
+                <button class="list-group-item list-group-item-action" id="random3">롤플레잉</button>
+            </div>
+        </div>
 
         <div class="container mt-3">
             <div class="list-group" id="recordingslist"></div>
