--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <h6 id="title">-</h6>
                 </div>
                 <h2 class="text-center" id="timer">
-                    00:00.000
+                    02:00.000
                 </h2>
     
                 <div class="text-center">
@@ -50,7 +50,7 @@
                 </div>
 
                 <div class="progress mb-3">
-                    <div id="progress" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div id="progress" class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
                 </div>
             </header>
             
