8/19 타이머 자유 조정, 일부 질문 텍스트 수정

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <h3>OPIC STUDY!</h3>
                     <h6 id="title">-</h6>
                 </div>
-                <h2 class="text-center" id="timer">
+                <h2 class="text-center" id="timer" draggable="true">
                     02:00.000
                 </h2>
     
@@ -40,8 +40,8 @@
                         <button id="replay" class="btn btn-secondary btn-lg">
                             Replay
                         </button>
-                        <button id="pause" class="btn btn-info btn-lg" disabled>
-                            Pause
+                        <button id="pause" class="btn btn-info btn-lg">
+                            Start
                         </button>
                         <button id="record" class="btn btn-danger btn-lg">
                             Record
