--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>OPIC Study!</title>
     <link href="./css/bootstrap.css" type="text/css" rel="stylesheet" />
     <link href="./css/custom.css" type="text/css" rel="stylesheet" />
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TGFXQ4KJ');</script>
   </head>
 
   <body>
@@ -110,5 +115,7 @@
     <script type="text/javascript" src="./js/recorder.js"></script>
     <script type="text/javascript" src="./js/modernizr-custom.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TGFXQ4KJ"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </body>
 </html>
